# echo

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/echo/: EchoApp.kt  MainActivity.kt
app/src/main/java/com/echo/core/accessibility/: EchoAccessibilityService.kt
app/src/main/java/com/echo/core/ai/: LlamaCppEngine.kt  SimpleGemmaEngine.kt
app/src/main/java/com/echo/core/overlay/: FloatingOverlayService.kt
app/src/main/java/com/echo/core/voice/: VoiceRecognizer.kt  VoiceService.kt  VoiceSynthesizer.kt
app/src/main/java/com/echo/di/: AppModule.kt
app/src/main/java/com/echo/ui/theme/: Theme.kt
app/src/main/java/com/echo/util/: Constants.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
